【change】Adjusting parameters
Change the display position and default value of the control panel.

--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,12 @@ body {
   position: absolute;
 }
 
-/* ローディング表示 */
+/** Tweakpane */
+.tp-dfwv {
+  left: 8px;
+}
+
+/** ローディング表示 */
 #loading {
   display: flex;
   justify-content: center;
