【add】Smartphone support
Blocked zoom in/out and long press functions.

--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,12 @@ body {
   margin: 0;
   height: 100%;
   overflow: hidden;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 
 #three {
