--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,16 @@
   --color-white: white;
 }
 
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 html,
 body {
   margin: 0;
@@ -20,8 +30,8 @@ body {
 }
 
 #three {
-  outline: 20px ridge var(--color-blackboard-border);
-  outline-offset: -20px;
+  border: 20px var(--color-blackboard-border);
+  border-style: ridge;
   display: block;
 }
 
