--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,6 +56,7 @@ body {
 }
 
 #three {
+  cursor: url(../icon/pencil-line.png), auto;
   display: block;
 }
 
@@ -98,8 +99,8 @@ body {
 
 /** Tweakpane */
 .tp-dfwv {
-  top: 24px;
-  left: 24px;
+  top: 15px;
+  left: 15px;
   width: 360px;
 }
 
