【change】CSS adjustments
Change the background color of the wall.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@
   --color-loading-border: rgba(255, 255, 255, 0.2);
   --color-loading-background: rgba(0, 0, 0, 0.3);
   --color-eraser: linear-gradient(0deg, #0c023a 80%, #a06b1c 80%);
-  --color-wall-background: #ffffef;
+  --color-wall-background: #ffffcc;
   --color-white: white;
 
   /* https://cocopon.github.io/tweakpane/theming.html#builder */
